# bingo_memes

./: .dockerignore  .gitignore  Dockerfile  README.md  Session.vim  cloudbuild.yml  docker-compose.dev.yml  docker-compose.local.backend.yml  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  start-dev-servers
.old/: Dockerfile.backend
backend/: .flake8  .pytest-queries  Dockerfile  Session.vim  conftest.py  debug_db.sqlite3  init-dev-db  libreddit_sort.py  load_tester.py  openapi-schema.yml  openapi-schemaa.yml  pyproject.toml  reset-db  setup.cfg  test-module  test-server  unit_test_runner.py
backend/.api/: serializers.py
backend/.api/management/commands/: init_db.py  unittest.py
backend/.old/: setup.cfg
backend/.old/api/: filters.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
backend/.old/api/management/commands/: init_db.py
backend/.old/card/: db.py  models_old.py  querysets.py
backend/.old/category/: api.py  exceptions.py  factories.py  models.py  querysets.py  schema.py  tests_old.py
backend/.old/generics/: middleware.py
backend/.old/generics/management/commands/: init_db.py
backend/.old/user/: exceptions.py  querysets.py
backend/.tools/: __init__.py
backend/api/: filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
backend/api/management/commands/: init_db.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/bingo_memes/: settings.py
backend/card/: admin.py  api.py  apps.py  db.py  exceptions.py  factories.py  models.py  schema.py  signals.py  tests.py  vote_testing.py
backend/card/migrations/: 0001_initial.py  0002_initial.py
backend/card/models/: __init__.py  base.py  const.py  plumbing.py  relations.py
backend/category/: api.py  factories.py  models.py  tests.py
backend/core/: api.py  auth.py  db.py  middleware.py  tools.py  urls.py
backend/core/management/commands/: init_db.py
backend/follow/: models.py
backend/generics/management/commands/: init_db.py
backend/hashtag/: models.py
backend/subscribe/: models.py
backend/user/: api.py  factories.py  models.py  schema.py  signals.py  tests.py  tests_pytest.py
backend/user/migrations/: 0001_initial.py
backend/vote/: models.py
docker/: Dockerfile  prestart.sh  print-nginx-conf.sh  uwsgi.ini
docker/.old/backend/: entrypoint.dev.sh  entrypoint.staging.sh  test.conf
docker/.old/frontend/: Dockerfile
docker/.old/frontend/nginx/: custom.conf
docker/backend/: Dockerfile  Dockerfile.old  entrypoint.sh  prestart.sh  uwsgi.ini
docker/frontend/: Dockerfile
docker/frontend/nginx/: nginx.conf
frontend/: eslintrc.json  package-lock.json  package.json  refresh-schema  session.vim  tsconfig.json
frontend/.old/: apirenderer.tsx  listview.tsx  loginview_old.tsx  oldsearchbar.tsx  pagination.tsx  scrollbutton.tsx
frontend/public/: index.html
frontend/public/static/: manifest.json  openapi.json
frontend/src/: debug.tsx  index.tsx
frontend/src/api/: axios.test.ts  axios.ts  backend.ts  client.d.ts  client.ts
frontend/src/components/: cardinfo.tsx  intro.tsx  test.tsx
frontend/src/components/card/: const.tsx  info.tsx  list.tsx  placeholder.tsx  sort.tsx  tiles.tsx  vote.tsx
frontend/src/context/: auth.tsx  tiles.tsx
frontend/src/helpers/: index.tsx  morph.tsx
frontend/src/layouts/: carddetail.tsx  cardlist.tsx  index.tsx  test.tsx
frontend/src/routes/: index.tsx
frontend/src/scss/: main.scss  solarized.scss
frontend/src/storage/: index.tsx
frontend/src/types/: api.d.ts  apiclient.d.ts  auth.d.ts
frontend/src/views/: about.tsx  searchview.tsx
frontend/src_old/: auth.tsx  debug.tsx  index.tsx  old_index.tsx
frontend/src_old/components/: cardlist.tsx  searchbar.tsx
frontend/src_old/views/: cardview.tsx  userview.tsx
notes/: map-domain-to-cloud-run.md  todo.txt  what_to_do.txt
(+3 files in other folders)
