[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A Django/React webapp."
authors = ["long"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
cryptography = "^36.0.1"
django-cors-headers = "^3.10.0"
django-ninja = "^0.17.0"
django-ninja-extra = "^0.14.0"
django-ninja-jwt = "^5.1.5"
email-validator = "^1.1.3"
factory-boy = "^3.2.1"
ipython = "^8.0.0"
nplusone = "^1.0.0"
psycopg2-binary = "^2.9.1"
pytest-django-queries = "^1.2.0"
django-auto-prefetch = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-django = "^4.5.2"
pytest-xdist = "^2.5.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.930"
black = "^21.12b0"
neovim = "^0.3.1"
requests = "^2.25.1"
httpx = "^0.22.0"
urlpath = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
exclude = ["migrations"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
addopts = "-rA --disable-warnings --no-migrations"
python_files = ["tests.py"]
