[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A Django/React webapp."
authors = ["long"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.11.0"
ipython = "^8.1.1"
PyYAML = "^6.0"
uritemplate = "^4.1.1"
pytest = "^7.1.1"
pytest-django = "^4.5.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.941"
black = "^22.1.0"
httpx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = "tests.py"
